--- a/uk/kuhni.html
+++ b/uk/kuhni.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 
 <head>
 	<meta charset="UTF-8">
@@ -20,35 +20,38 @@
 			<a href="fasad.html">Фасады</a>
 			<a href="decor.html">Декор</a>
 			<a href="contact.html">Контакты</a>
-            <a href="uk/index.html">УКР</a>
-            <a href="index.html">РУС</a>
+            <a href="#">УКР</a>
+            <a href="#">РУС</a>
             <a href="#">ENG</a>
 		</nav>
-		<img src="index.jpg/logomain.jpg" alt="кухня главная">
 	</header>
 		<main>
 			<section>
-				<h1>КАЧЕСТВО</h1>
-				<p>Кухни из дерева заслуженно считается признаком хорошего вкуса и подчеркивает статус владельца.<br>
-					Этому способствует тот факт, что натуральное дерево всегда выглядит изыскано и роскошно.</p>
-					<a href="kuhni.html">НАШИ КУХНИ</a>
-			</section>
-			<section>
-				<a href="#">читать больше.</a>
-				<a href="#">читать больше.</a>
-				<a href="#">читать больше.</a>
-			</section>
-			<section>
-				<a href="#">читать больше.</a>
-				<a href="#">читать больше.</a>
-				<a href="#">читать больше.</a>
-			</section>
-			<!--
-         Пропущенный раздел-Преимушества
+				<h1>КУХНИ</h1>
+				<p>Кухни из дерева заслуженно считается признаком хорошего вкуса и подчеркивает статус владельца. Этому
+					способствует тот факт,<br> что натуральное дерево всегда выглядит изыскано и роскошно.
+
+					Наше предприятие накопило большой опыт и традиции по изготовлению деревянных кухонь.<br> Мы располагаем
+					современной производительной базой, квалифицированным персоналом, что позволяет нам создавать
+					красивые и уникальные изделия.<br>
+
+					Модельный ряд наших кухонь широчайший. Мы можем изготовить кухни практически в любом стиле.<br>
+
+					Вся мебель проектируется и производится индивидуально, в ней учитывается все Ваши пожелания и вкусы.<br>
+
+					При производстве кухонь мы используем все современные материалы и комплектующие.<br>
+
+					На всех этапах производства, происходит контроль качества, поэтому наши изделия долговечны.</p>
+					<!--
+         Пропущенный раздел
           -->
-			<!--
-        Пропущенный раздел-Swipe
+					<!--
+         Пропущенный раздел
           -->
+					<!--
+         Пропущенный раздел
+          -->
+			</section>
 		</main>
 		<footer>
 			<h2>Связаться с нами</h2>
@@ -62,7 +65,7 @@
 				<textarea name="сообщения" rows="6" placeholder="Сообщения"></textarea>
 				<br>
 				<input type="submit">
-                <br>
+             <br>
 				<a href="index.html">Главная</a>
                 <br>
 				<a href="kuhni.html">Кухни</a>
