--- a/index.html
+++ b/index.html
@@ -5,44 +5,43 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>familia</title>
-</head>
+	<link rel="stylesheet" href="css/index.css">
 
 <body>
 	<header>
 		<nav>
-			<img src="index.jpg/logofirst.gif" alt="лого familia">
-			<a href="index.html">Главная</a>
-			<a href="kuhni.html">Кухни</a>
-			<a href="spalni.html">Спальни</a>
-			<a href="kabinet.html">Кабинеты</a>
-			<a href="gostin.html">Гостинные</a>
-			<a href="prihoj.html">Прихожие</a>
-			<a href="fasad.html">Фасады</a>
-			<a href="decor.html">Декор</a>
-			<a href="contact.html">Контакты</a>
-            <a href="uk/index.html">УКР</a>
-            <a href="index.html">РУС</a>
-            <a href="#">ENG</a>
+        <img class="header-logo" src="index.jpg/logofirst.gif" alt="лого familia">
+			<ul class="header-menu">
+				<li><a href="index.html">Главная</a></li>
+				<li><a href="kuhni.html">Кухни</a></li>
+				<li><a href="spalni.html">Спальни</a></li>
+				<li><a href="kabinet.html">Кабинеты</a></li>
+				<li><a href="gostin.html">Гостинные</a></li>
+				<li><a href="prihoj.html">Прихожие</a></li>
+				<li><a href="fasad.html">Фасады</a></li>
+				<li><a href="decor.html">Декор</a></li>
+				<li><a href="contact.html">Контакты</a></li>
+				<li><a href="uk/index.html">УКР</a></li>
+				<li><a href="index.html">РУС</a></li>
+				<li><a href="en/index.html">ENG</a></li>
+			</ul>
 		</nav>
-		<img src="index.jpg/logomain.jpg" alt="кухня главная">
-	</header>
-		<main>
-			<section>
-				<h1>КАЧЕСТВО</h1>
+        <div class="header-banner">
+					<h1>КАЧЕСТВО</h1>
 				<p>Кухни из дерева заслуженно считается признаком хорошего вкуса и подчеркивает статус владельца.<br>
 					Этому способствует тот факт, что натуральное дерево всегда выглядит изыскано и роскошно.</p>
-					<a href="kuhni.html">НАШИ КУХНИ</a>
-			</section>
-			<section>
+					<a href="kuhni.html" class="button">НАШИ КУХНИ</a>
+                </div>
+	</header>
+		<main>
+             <div class="text-header">
 				<a href="#">читать больше.</a>
 				<a href="#">читать больше.</a>
 				<a href="#">читать больше.</a>
-			</section>
-			<section>
 				<a href="#">читать больше.</a>
 				<a href="#">читать больше.</a>
 				<a href="#">читать больше.</a>
-			</section>
+            </div>
 			<!--
          Пропущенный раздел-Преимушества
           -->
@@ -51,7 +50,9 @@
           -->
 		</main>
 		<footer>
+        <div class="text-header">
 			<h2>Связаться с нами</h2>
+        </div>
 			<form action="https://formspree.io/mleplngj" method="POST">
 				<input type="text" name="Имя" placeholder="Имя" required>
 				<br>
@@ -62,25 +63,18 @@
 				<textarea name="сообщения" rows="6" placeholder="Сообщения"></textarea>
 				<br>
 				<input type="submit">
-                <br>
-				<a href="index.html">Главная</a>
-                <br>
-				<a href="kuhni.html">Кухни</a>
-                <br>
-				<a href="spalni.html">Спальни</a>
-                <br>
-				<a href="kabinet.html">Кабинеты</a>
-                <br>
-				<a href="gostin.html">Гостинные</a>
-                <br>
-				<a href="prihoj.html">Прихожие</a>
-                <br>
-				<a href="fasad.html">Фасады</a>
-                <br>
-				<a href="decor.html">Декор</a>
-                <br>
-				<a href="contact.html">Контакты</a>
-            </form>
+				<ul class="header-menu1">
+					<li><a href="index.html">Главная</a></li>
+					<li><a href="kuhni.html">Кухни</a></li>
+					<li><a href="spalni.html">Спальни</a></li>
+					<li><a href="kabinet.html">Кабинеты</a></li>
+					<li><a href="gostin.html">Гостинные</a></li>
+					<li><a href="prihoj.html">Прихожие</a></li>
+					<li><a href="fasad.html">Фасады</a></li>
+					<li><a href="decor.html">Декор</a></li>
+					<li><a href="contact.html">Контакты</a></li>
+				</ul>
+			</form>
 		</footer>
 </body>
 
